# pdd-by.v14

./: CMakeLists.txt
data/: oak14.json
include/pddby/: Buffer.h  Forest.h  ICrawler.h  IOak.h  Shit.h
include/pddby/Leaf/: CommentLeaf.h  ImageLeaf.h  QuestionLeaf.h  SectionLeaf.h  TopicLeaf.h  TraffRegLeaf.h
include/pddby/Limb/: ICommentLimb.h  IImageLimb.h  IQuestionLimb.h  ISectionLimb.h  ITopicLimb.h  ITraffRegLimb.h
lib/: CMakeLists.txt  Forest.cpp  Helpers.h
lib/Decode/: IFilter.h  IReadStream.h  IWriteStream.h
lib/Decode/Filter/: HeaderCheckingFilter.cpp  HeaderCheckingFilter.h  NoopFilter.cpp  NoopFilter.h  TripleDes24Filter.cpp  TripleDes24Filter.h  TripleDesFilter.cpp  TripleDesFilter.h
lib/Decode/Filter/Image/: A8ImageFilter.cpp  A8ImageFilter.h  BpftHelper.cpp  BpftHelper.h  BpftImageFilter.cpp  BpftImageFilter.h  BpftcamImageFilter.cpp  BpftcamImageFilter.h  UglyPngImageFilter.cpp  UglyPngImageFilter.h
lib/Decode/Random/: AmPrngRandom.cpp  AmPrngRandom.h  DelphiRandom.cpp  DelphiRandom.h  RollingStonesRandom.cpp  RollingStonesRandom.h  TrashCartPrngRandom.cpp  TrashCartPrngRandom.h
lib/Decode/Stream/: BaseFilteringReadStream.cpp  BaseFilteringReadStream.h  FileReadStream.cpp  FileReadStream.h  MemoryReadStream.cpp  MemoryReadStream.h  MemoryWriteStream.cpp  MemoryWriteStream.h  StreamShit.h
lib/Decode/Util/: CodepageConverter.cpp  CodepageConverter.h  Hash.cpp  Hash.h  Path.cpp  Path.h
lib/Limb/: IMutableCommentLimb.h  IMutableImageLimb.h  IMutableQuestionLimb.h  IMutableSectionLimb.h  IMutableTopicLimb.h  IMutableTraffRegLimb.h  JsonSectionLimb.cpp  JsonSectionLimb.h  JsonTopicLimb.cpp  JsonTopicLimb.h
lib/Limb/Json/: JsonSectionLimb.cpp  JsonSectionLimb.h  JsonTopicLimb.cpp  JsonTopicLimb.h
lib/Limb/Oak14/: Oak14ImageLimb.cpp  Oak14ImageLimb.h  Oak14QuestionLimb.cpp  Oak14QuestionLimb.h
lib/Limb/Sqlite/: SqliteCommentLimb.cpp  SqliteCommentLimb.h  SqliteImageLimb.cpp  SqliteImageLimb.h  SqliteQuestionLimb.cpp  SqliteQuestionLimb.h  SqliteSectionLimb.cpp  SqliteSectionLimb.h  SqliteTopicLimb.cpp  SqliteTopicLimb.h  SqliteTraffRegLimb.cpp  SqliteTraffRegLimb.h
lib/Oak/: IMutableOak.h  Oak14.cpp  Oak14.h  SqliteOak.cpp  SqliteOak.h
lib/Oak/Oak14/: Oak14ImageLimb.cpp  Oak14ImageLimb.h  Oak14QuestionLimb.cpp  Oak14QuestionLimb.h
qt/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  PddBy.icns  PddByGui.qrc  SectionDialog.cpp  SectionDialog.h  SectionDialog.ui  TicketDialog.cpp  TicketDialog.h  TicketDialog.ui  main.cpp
test/: CMakeLists.txt  FilterTestSuite.cpp  OakTestSuite.cpp
